--- a/styles/index.sass
+++ b/styles/index.sass
@@ -3,3 +3,15 @@ h4
 h5
   color: pink;
 
+.loginform
+  text-align: center
+.login_label
+  color: #22D4FF;
+  margin-top: 50px
+  margin-bottom: 30px
+.login_button
+  margin-left: 50px
+.input_alert
+  width: 300px
+  height: 50px
+
