--- a/styles/index.sass
+++ b/styles/index.sass
@@ -1,8 +1,6 @@
-h4
-  color: pink;
-h5
-  color: pink;
-
+@import "navbar"
+@import "forms"
+@import "pages"
 .loginform
   text-align: center
 .login_label
